<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingBottom="20dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_device"
        android:gravity="center" />
    <TextView
        android:id="@+id/val_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dip"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:typeface="monospace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_product"
        android:gravity="center" />
    <TextView
        android:id="@+id/val_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dip"
        android:gravity="center"
        android:typeface="monospace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_board"
        android:gravity="center" />
    <TextView
        android:id="@+id/val_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dip"
        android:gravity="center"
        android:typeface="monospace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_hardware"
        android:gravity="center" />
    <TextView
        android:id="@+id/val_hardware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dip"
        android:gravity="center"
        android:typeface="monospace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_model"
        android:gravity="center" />
    <TextView
        android:id="@+id/val_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dip"
        android:gravity="center"
        android:typeface="monospace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_manufacturer"
        android:gravity="center" />
    <TextView
        android:id="@+id/val_manufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:typeface="monospace" />

</LinearLayout>
